# Rust-Web-Programming-A-hands-on-guide-to-developing-fast-and-secure-web-apps-with-the-Rust-programmi

./: .gitignore  README.md
.github/workflows/: rust.yml
Chapter01/integers_and_floats/: Cargo.toml
Chapter01/scopes/: Cargo.toml
Chapter01/vectors_and_arrays/: Cargo.toml
Chapter02/building_structs/: Cargo.toml
Chapter02/web_app/: Cargo.toml
new_project/src/: main.rs
projects/page_005_using_strings_in_rust/: Cargo.toml
projects/page_006_using_string_literals_in_rust/: Cargo.toml
projects/page_007_understanding_integers_and_floats/: Cargo.toml
projects/page_008_storing_data_in_vectors_and_arrays/: Cargo.toml
projects/page_009_mapping_data_with_hash_maps/: Cargo.toml
projects/page_011_handling_results_and_errors/: Cargo.toml
projects/page_113_process_json_web_token/: Cargo.toml
projects/page_113_process_json_web_token/src/: main.rs
projects/page_113_process_json_web_token/src/views/: mod.rs  path.rs  token.rs
projects/page_169_editing_the_database/: Cargo.toml
projects/page_169_editing_the_database/src/views/to_do/: edit.rs
projects/page_269_deploying_to_aws/: Cargo.toml  Dockerfile
projects/page_269_deploying_to_aws/deploy/: docker-compose.yml  push_to_dockerhub.sh  push_to_server.sh
projects/page_269_deploying_to_aws/deploy/nginx/: nginx.conf
projects/page_269_deploying_to_aws/src/: main.rs
projects/page_269_deploying_to_aws/src/auth/: mod.rs  processes.rs
projects/page_269_deploying_to_aws/src/to_do/structs/: done.rs
projects/page_269_deploying_to_aws/src/to_do/structs/traits/: edit.rs
projects/page_269_deploying_to_aws/src/views/auth/: login.rs
projects/page_269_deploying_to_aws/src/views/users/: create.rs
(+221 files in other folders)
