[package]
name = "page_113_process_json_web_token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1.0"
actix-service = "1.0.6"
futures = "0.3.5"
serde = "1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
