[package]
name = "page_269_deploying_to_aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-service = "1.0.6"
actix-web = "2"
bcrypt = "0.8.2"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.8.1"
futures = "0.3.5"
hmac = "0.8.1"
jwt = "0.9.0"
log = "0.4.11"
serde = "1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = "0.9" 
uuid = {version = "0.8", features = ["serde", "v4"]}

# Needed for Postgres.
openssl = "*"
